# kosim

./: Cargo.toml  LICENSE  README.md
assets/shaders/: chunk_fade.wgsl  chunk_prepass.wgsl
crates/kosim_camera/: Cargo.toml
crates/kosim_camera/src/: first_person_camera.rs  freecam.rs  lib.rs
crates/kosim_input/: Cargo.toml
crates/kosim_input/src/: binding.rs  cursor.rs  input.rs  lib.rs
crates/kosim_interface/: Cargo.toml
crates/kosim_interface/src/: lib.rs
crates/kosim_player/: Cargo.toml  LICENSE
crates/kosim_player/src/: action.rs  body.rs  config.rs  debug.rs  focus.rs  freecam.rs  gravity.rs  lib.rs  motion.rs  stance.rs
crates/kosim_player/src/actions/: crouch.rs  mod.rs  sprint.rs  step.rs
crates/kosim_terrain/: Cargo.toml
crates/kosim_utility/: Cargo.toml
crates/kosim_utility/src/: format_value.rs  interpolated_value.rs  lib.rs  mesh.rs
crates/kosim_world/: Cargo.toml
crates/kosim_world/src/: fade.rs  generation.rs  lib.rs  lod.rs  octree.rs  tables.rs  voxel.rs
src/: main.rs
