[package]
name = "kosim"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
kosim_camera = { version = "0.1.0", path = "crates/kosim_camera" }
kosim_input = { version = "0.1.0", path = "crates/kosim_input" }
kosim_player = { version = "0.1.0", path = "crates/kosim_player" }
kosim_utility = { version = "0.1.0", path = "crates/kosim_utility" }
bevy = { version = "0.17.3", features = [
    "dynamic_linking",
    "file_watcher",
    "embedded_watcher",
    "bevy_dev_tools",
] }
bevy_dylib = "0.17.3"
bevy_turborand = "0.12.0"
avian3d = { version = "0.4" }
bevy_kira_audio = { version = "0.24.0", features = ["wav"] }

[workspace]
resolver = "2"                                               # Important! wgpu/Bevy needs this!
members = ["crates/kosim_interface", "crates/kosim_terrain"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
use-debug-plugin = []
