[package]
name = "kosim_camera"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
avian3d = { version = "0.6" }
bevy = { version = "0.18.1", features = [
    "dynamic_linking",
    "file_watcher",
    "embedded_watcher",
    "bevy_dev_tools",
] }
chrono = "0.4.42"
bevy_kira_audio = { version = "0.25.0", features = ["wav"] }
kosim_input = { version = "0.1.0", path = "../kosim_input" }
kosim_utility = { version = "0.1.0", path = "../kosim_utility" }
